<resources>
    <string name="app_name">DiceGame</string>
    <string name="roll">Roll</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="player">Player</string>
    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="score1">Player 1 Score:</string>
    <string name="score2">Player 2 Score:</string>
    <string name="title">Dice Game</string>
    <string name="game">Play Game</string>
    <string name="mainmenu">Main Menu</string>
    <string name="resetscore">Reset Score</string>
</resources>